# SQLite.py

./: .gitignore  README.md  pyproject.toml
test/: test.py
