[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite"
version = "1.0.0"
authors = [
  { name="Alexander Yermolenko" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://surfy.one"
"GitHub" = "https://github.com/theastroscout/SQLite.py"
"Bug Tracker" = "https://github.com/hqdaemon/SQLite.py/issues"